image file,style,main,footer added

--- a/index.html
+++ b/index.html
@@ -1,11 +1,134 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
+        integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="styles/style.css">
     <title>New Year New Project</title>
 </head>
+
 <body>
-    
+    <header>
+        <section>
+            <div class="header-side">
+                <h1 class="title">All Thinks Are Possible If You believe</h1>
+                <p class="details">There are many variations of passages of Lorem Ipsum available, but the majority have
+                    suffered
+                    alteration in some form, by injected humour, or randomised words</p>
+                <button class="btn-contact">
+                    <p>Contact Us</p>
+                </button>
+            </div>
+        </section>
+    </header>
+    <main>
+        <article>
+            <section>
+                <div class="previous-years">
+                    <div>
+                        <img class="img-person" src="./images/person.png" alt="">
+                    </div>
+                    <div class="failurs">
+                        <h2 class="failurs-title">My failures of previous year</h2>
+                        <p class="failures-details">Contrary to popular belief, Lorem Ipsum is not simply random text.
+                            It has roots in a piece of
+                            classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock.
+                        </p>
+                        <div class="numbers">
+                            <div><input type="checkbox" name="" id=""></div>
+                            <div class="one">
+                                <h6>Contrary to popular belief, is not simply.</h6>
+                            </div>
+                        </div>
+                        <div class="numbers">
+                            <div> <input type="checkbox" name="" id=""></div>
+                            <div class="one">
+                                <h6>Contrary to popular belief.</h6>
+                            </div>
+                        </div class="numbers">
+                        <div class="numbers">
+                            <div><input type="checkbox" name="" id=""></div>
+                            <div class="one">
+                                <h6>Contrary to popular , is not simply.</h6>
+                            </div>
+                        </div>
+                        <div class="numbers">
+                            <div><input type="checkbox" name="" id=""></div>
+                            <div class="one">
+                                <h6>Contrary to popular belief, is not simply.</h6>
+                            </div>
+
+                        </div>
+                        <div class="numbers">
+                            <div><input type="checkbox" name="" id=""></div>
+                            <div class="one">
+                                <h6>Contrary to popular simply.</h6>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </section>
+            <section>
+
+                <h2 class="plans">My Plans</h2>
+                <div class="all-plans">
+                    <div>
+                        <img src="./images/icons/web.png" alt="">
+                        <h3>Web Development</h3>
+                        <h4>I want to start</h4>
+                    </div>
+                    <div>
+                        <img src="./images/icons/js.png" alt="">
+                        <h3>Javascript</h3>
+                        <h4>I want to learn</h4>
+                    </div>
+                    <div>
+                        <img src="./images/icons/smoke.png" alt="">
+                        <h3>Smoking Habit</h3>
+                        <h4>I want to end</h4>
+                    </div>
+                    <div>
+                        <img src="./images/icons/ecom.png" alt="">
+                        <h3>ecommerce</h3>
+                        <h4>I want to develop</h4>
+                    </div>
+                </div>
+                <div class="gredient-img">
+                    <h2 class="positivness">Awlays keep a positive mindset</h2>
+                    <button class="call-btn">
+                        <p>Call Now</p>
+                    </button>
+                </div>
+            </section>
+        </article>
+    </main>
+    <footer>
+        <section>
+            <div class="footer-con">
+                <div>
+                    <h2>Future</h2>
+                    <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered
+                        alteration in some form, by injected humour, or randomised words</p>
+                    <p>selim.ru.11.92@gmail.com</p>
+                    <p>Phone:01717195101</p>
+                    <div>
+                        <a href="https://web.facebook.com/?_rdc=1&_rdr"><i class="fa-brands fa-facebook"></i></a>
+                        <a target="_blank" href=""><i class="fa-brands fa-twitter"></i></a>
+                        <a target="_blank" href="https://www.youtube.com/shorts/7Bqu5TeZP9E"><i class="fa-brands fa-youtube"></i></a>
+                    </div>
+                </div>
+                <div>
+                    <h3>Subscribe</h3>
+                    <input type="email" name="" id=""><br>
+                    <button>Subscribe</button>
+                </div>
+            </div>
+        </section>
+    </footer>
 </body>
+
 </html>
